--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "A minimal Electron application with puppeteer",
   "main": "main.js",
   "scripts": {
-    "package": "rm -rf dist && electron-packager ./ --platform=all --out=dist ",
+    "build-m": "rm -rf dist_mac && electron-packager ./ --platform=darwin --out=dist_mac ",
     "start": "electron .",
     "extract:mac": "rm -rf app-asar && asar extract 'dist/mac/electron-puppeteer-quick-start.app/Contents/Resources/app.asar' app-asar",
-    "build": "rm -rf dist && electron-builder --m --x64",
-    "build-w": "rm -rf dist && electron-builder --win --x64",
+    "build-w": "rm -rf dist_win && electron-builder --win --x64",
     "open": "open dist/mac/electron-puppeteer-quick-start.app/Contents/MacOS/electron-puppeteer-quick-start"
   },
   "build": {
@@ -45,7 +44,7 @@
     },
     "directories": {
       "buildResources": "resources",
-      "output": "dist"
+      "output": "dist_win"
     }
   },
   "repository": "https://github.com/Raidus/electron-puppeteer-quick-start",
